#23 - Final Update Overflow Issues Fixed - Date: July 20, Time - 11.40 PM

--- a/assets/css/style-two.css
+++ b/assets/css/style-two.css
@@ -291,6 +291,7 @@ hr {
 @media screen and (max-width: 576px) {
     body {
         margin: 0%;
+        overflow-x: hidden;
     }
 
     .main {
@@ -418,6 +419,7 @@ hr {
 @media screen and (min-width: 577px) and (max-width: 768px) {
     body {
         margin: 0%;
+        overflow-x: hidden;
     }
 
     main {
