--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,6 +309,7 @@ hr {
 @media screen and (max-width: 576px) {
     body {
         margin: 0%;
+        overflow-x: hidden;
     }
 
     .main {
@@ -437,6 +438,7 @@ hr {
 @media screen and (min-width: 577px) and (max-width: 768px) {
     body {
         margin: 0%;
+        overflow-x: hidden;
     }
 
     main {
@@ -582,7 +584,7 @@ hr {
         align-items: center;
         text-align: center;
     }
-
+    
     .f-title {
         font-size: 35px;
         margin-top: 10%;
